--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section id = me>
         <div class="section-inner">
-            <img src="pics/me.jpg" class="profile-img">
+            <img src="https/itsaisanad.github.io/me.jpg" class="profile-img">
             <h1>Hi! I'm Aisana.</h1>
             <h3>Sunflower.   South Origin.   Young Women.   Lunar Mind.</h3>
             <h3>Student of Media Technologies-2005,  Astana IT University.</h3>
@@ -65,7 +65,7 @@
             <li>Currently on getting Bachelor's Degree in AITU, 2020-2023</li>
             <li>Having family and friends, Lifetime </li>
         </ul>
-        <img src="pics/fam2.jpg" class = "pictures">
+        <img src="https/itsaisanad.github.io/fam2.jpg" class = "pictures">
         </section>
 
         <section id = contacts>
