--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <li><a class = social href= "https://vk.com/callmeai">VK</a></li>
                     
                     </ul>
-                    <p> Or, <a hfer= "mailto:dutbaeva.aisana@mail.ru"> email</a> me.</p>
+                    <p> Or, <a href= "mailto:dutbaeva.aisana@mail.ru"> email</a> me.</p>
                 <h3>Thanks for attention!</h3>
                 <h4>Sunflower, you're my happy place</h4>
             </div>
